Property filter, Element.evaluate(), ModelElement.getEnumerateValue()